Make code compatible to JDK 8.